--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ loguru==0.7.0
 pydantic==1.10.7
 python-dotenv==1.0.0
 pyTelegramBotAPI==4.11.0
-pafy
-youtube_dl
+pafy==0.5.5
+youtube_dl==2021.12.17
+pytest==7.3.2
